clusters/demo-cluster-1/flux-system-extras/democl-webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations: {}
    #cert-manager.io/cluster-issuer: letsencrypt-production
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
  - host: democl-webhook.hephy.pro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
  #tls:
  #- hosts:
  #  - democl-webhook.hephy.pro
  #  secretName: democl-webhook-tls
